This file documents the revision history for mod_gearman.

3.0.6 Thu Jul 26 10:05:56 CEST 2018
          - gearman_proxy.pl: set tcp keepalive
          - fix memory leak when using naemon
          - check_gearman: add -x option to alert queue without worker
          - update nagios4 header files to version 4.3.4

3.0.5 Mon Jul 10 21:55:17 CEST 2017
          - fix issue with contact macros (#120 Adrian Lopez)
          - cleanup send_gearman.pl tool

3.0.4 Fri Jun 23 16:35:26 CEST 2017
          - fix issue with notification macros
          - fix corrupted check_source

3.0.3 Mon Jun 12 11:32:11 CEST 2017
          - fix undefined symbol notification_reason_name in nagios3 module

3.0.2 Fri May  5 12:13:45 CEST 2017
          - add distribution of notifications

3.0.1 Mon Jan 30 13:00:47 CET 2017
          - fix segfault on receiving host result for non-existing host with naemon core
          - fix memory leak when using naemon core (#106 Jean-François Rameau)

3.0.0 Mon Sun Oct 30 19:49:24 CET 2016
          - introduce configure options --enable-naemon-neb-module, --enable-nagios3-neb-module and --enable-nagios4-neb-module
            to determine which neb module to build. This obsoletes mod-gearman 1.x and 2.x and
            combines both into mod-gearman 3.x.
          - support ipv6 in gearman_top and check_gearman
          - moved perfdata=all to separate option perfdata_send_all=yes
          - support multiple perfdata queues
          - fix crash when using nonexisting group in localhostgroup/localservicegroups (#100)
          - fix double escaping backslashes (#99)
          - add workaround for problem with hostchecks in naemon core

          *** MIGRATION NOTE: ***
          You have to change the neb module path after this update. There is no mod_gearman.o anymore but instead you have
          choose the right module of: mod_gearman_nagios3.o, mod_gearman_nagios4.o and mod_gearman_naemon.o

2.1.5 Wed Sep 30 11:49:17 CEST 2015